--- a/zsh/windowsTerminalSettings.json
+++ b/zsh/windowsTerminalSettings.json
@@ -39,6 +39,7 @@
     "copyFormatting": "none",
     "copyOnSelect": false,
     "defaultProfile": "{07b52e3e-de2c-5db4-bd2d-ba144ed6c273}",
+    "useTabSwitcher": "mru",
     "profiles": {
         "defaults": {
             "fontFace": "JetBrains Mono"
